--- a/Brute Force - Veri Tabanı Saldırları ve Güvenliği/DBSecurity/DBSecurity/DBSecurity.csproj
+++ b/Brute Force - Veri Tabanı Saldırları ve Güvenliği/DBSecurity/DBSecurity/DBSecurity.csproj
@@ -80,7 +80,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="uniqpass_preview.txt" />
+    <Content Include="uniqpass_preview.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
